<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/padding"
    android:paddingRight="@dimen/padding"
    tools:context=".ProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <TextView
        android:id="@+id/textViewProfileName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textViewProfileName"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/editTextProfileName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        android:visibility="visible"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/textViewProfileGender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textViewProfileGender"
        android:visibility="visible"
        tools:visibility="visible" />

    <RadioGroup
        android:id="@+id/radioGroupProfileGender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible"
        tools:visibility="visible">

        <RadioButton
            android:id="@+id/radioButtonProfileGenderMale"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radioButtonProfileGenderMale" />

        <RadioButton
            android:id="@+id/radioButtonProfileGenderFemale"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radioButtonProfileGenderFemale" />

    </RadioGroup>

    <TextView
        android:id="@+id/textViewProfileAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textViewProfileAge"
        android:visibility="visible"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/editTextProfilePage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="number"
        android:visibility="visible"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/textViewProfileDisability"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textViewProfileDisability"
        android:visibility="visible"
        tools:visibility="visible" />

    <CheckBox
        android:id="@+id/checkBoxProfileDisability"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="CheckBox"
        android:visibility="visible"
        tools:visibility="visible" />
    </LinearLayout>

</androidx.appcompat.widget.LinearLayoutCompat>