<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/padding"
    android:paddingRight="@dimen/padding"
    tools:context=".Feedback">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewFeedbackFeedback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textViewFeedbackFeedback" />

        <EditText
            android:id="@+id/editTextMultiLineFeedbackFeedback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:importantForAutofill="no" />

        <TextView
            android:id="@+id/textViewFeedbackImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textViewFeedbackImage" />

        <ImageView
            android:id="@+id/imageViewFeedbackImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:srcCompat="@android:drawable/ic_menu_camera"
            android:contentDescription="TODO" />

        <Button
            android:id="@+id/buttonFeedbackUploadImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buttonFeedbackUploadImage" />
    </LinearLayout>
</androidx.appcompat.widget.LinearLayoutCompat>